[gd_scene load_steps=17 format=4 uid="uid://brhllmdgpj07q"]

[ext_resource type="TileSet" uid="uid://tibl5rc5piad" path="res://Scenes/Game/level_tile_set.tres" id="1_ebmjs"]
[ext_resource type="Script" uid="uid://s5g5xuyidp5p" path="res://Scenes/Game/game.gd" id="1_wrm1d"]
[ext_resource type="PackedScene" uid="uid://b8bjrq16v05pq" path="res://Scenes/Player/player.tscn" id="2_3dryh"]
[ext_resource type="AudioStream" uid="uid://dji348ai0lqvy" path="res://Assets/Audio/Death.ogg" id="2_8e3kh"]
[ext_resource type="Script" uid="uid://dtw3dow0778l" path="res://Scenes/Level Manager/level.gd" id="2_h4fw4"]
[ext_resource type="PackedScene" uid="uid://dpsv6nrk5dkh" path="res://Scenes/UI/ui.tscn" id="2_v158k"]
[ext_resource type="PackedScene" uid="uid://ke2oqvxlb7wy" path="res://Scenes/Level Manager/level_manager.tscn" id="3_1l0tm"]
[ext_resource type="AudioStream" uid="uid://2qp0nv3h88gk" path="res://Assets/Audio/Victory.ogg" id="3_56qi8"]
[ext_resource type="Resource" uid="uid://c3uw4nb4g4gxs" path="res://Data/Levels/level_1.tres" id="5_8e3kh"]
[ext_resource type="Resource" uid="uid://3wnmrq1x5qia" path="res://Data/Levels/level_2.tres" id="6_56qi8"]
[ext_resource type="Resource" uid="uid://dsk55to5nq6ak" path="res://Data/Levels/level_3.tres" id="7_2vowc"]
[ext_resource type="Resource" uid="uid://vvwwupa4urwr" path="res://Data/Levels/level_5.tres" id="7_ypmwd"]
[ext_resource type="Resource" uid="uid://ctklgd70ap4he" path="res://Data/Levels/level_4.tres" id="8_yox4t"]
[ext_resource type="AudioStream" uid="uid://wd1goqxq72d6" path="res://Assets/Audio/Action 2 (Loop).ogg" id="9_h4fw4"]
[ext_resource type="PackedScene" uid="uid://ce7c6lqgynpsa" path="res://Scenes/Power Up/power_up_manager.tscn" id="9_ypmwd"]
[ext_resource type="AudioStream" uid="uid://bnl4khx3eq8fx" path="res://Assets/Audio/lowFrequency_explosion_001.ogg" id="13_oejk7"]

[node name="Game" type="Node2D"]
process_mode = 1
script = ExtResource("1_wrm1d")
player_start_position = Vector2i(1, 4)
lose_music = ExtResource("2_8e3kh")
win_music = ExtResource("3_56qi8")

[node name="UI" parent="." instance=ExtResource("2_v158k")]
z_index = 4
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 240.0
offset_bottom = 160.0

[node name="LevelManager" parent="." node_paths=PackedStringArray("_enemies", "_power_up_manager") instance=ExtResource("3_1l0tm")]
levels = Array[ExtResource("2_h4fw4")]([ExtResource("5_8e3kh"), ExtResource("6_56qi8"), ExtResource("7_2vowc"), ExtResource("8_yox4t"), ExtResource("7_ypmwd")])
_enemies = NodePath("../Enemies")
_power_up_manager = NodePath("../PowerUpManager")

[node name="PowerUpManager" parent="." instance=ExtResource("9_ypmwd")]

[node name="Firebolts" type="Node2D" parent="."]
z_index = 3

[node name="Enemies" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource("2_3dryh")]
z_index = 3
position = Vector2(16, 32)
power_up_duration = 3.0

[node name="LevelMapLayer" type="TileMapLayer" parent="."]
z_index = 2
tile_map_data = PackedByteArray("AAACAAEAAAASAA0AAAACAAIAAAASAA4AAAACAAMAAAASAA4AAAACAAQAAAASAA4AAAACAAUAAAASAA4AAAAAAAEAAAARAA0AAAABAAEAAAARAA0AAAACAAYAAAASAA4AAAACAAcAAAASAA4AAAACAAgAAAASAA8AAAABAAgAAAARAA8AAAAAAAgAAAARAA8AAAACAAkAAAAHAA8AAAABAAkAAAAHAA8AAAAAAAkAAAAHAA8AAAADAAEAAAARABUAAAAEAAEAAAARABUAAAAFAAEAAAARABUAAAAGAAEAAAARABUAAAAHAAEAAAARABUAAAAIAAEAAAARABUAAAAJAAEAAAARABUAAAAKAAEAAAARABUAAAALAAEAAAARABUAAAAMAAEAAAARABUAAAANAAEAAAARABUAAAAOAAEAAAARABUAAAADAAgAAAARABAAAAAEAAgAAAARABAAAAAFAAgAAAARABAAAAAGAAgAAAARABAAAAAHAAgAAAARABAAAAAIAAgAAAARABAAAAAJAAgAAAARABAAAAAKAAgAAAARABAAAAALAAgAAAARABAAAAAMAAgAAAARABAAAAANAAgAAAARABAAAAAOAAgAAAARABAAAAA=")
tile_set = ExtResource("1_ebmjs")

[node name="TowerColorRect" type="ColorRect" parent="."]
z_index = 1
offset_top = 17.0
offset_right = 47.0
offset_bottom = 159.0
color = Color(0.117647, 0.0784314, 0.196078, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(120, 80)
zoom = Vector2(4, 4)

[node name="TowerDamaged" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("13_oejk7")
volume_db = -4.494
max_polyphony = 5
bus = &"Sound Effects"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("9_h4fw4")
autoplay = true
bus = &"Music"

[node name="FirstLevelDelayTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="lose_no_button_pressed" from="UI" to="." method="_on_start_menu_button_pressed"]
[connection signal="lose_yes_button_pressed" from="UI" to="." method="_on_restart_button_pressed"]
[connection signal="pause_game_pressed" from="UI" to="." method="_on_ui_pause_game_pressed"]
[connection signal="pause_menu_back_button_pressed" from="UI" to="." method="_on_ui_pause_menu_back_button_pressed"]
[connection signal="pause_menu_quit_button_pressed" from="UI" to="." method="_on_ui_pause_menu_quit_button_pressed"]
[connection signal="win_no_button_pressed" from="UI" to="." method="_on_start_menu_button_pressed"]
[connection signal="win_yes_button_pressed" from="UI" to="." method="_on_restart_button_pressed"]
[connection signal="level_index_updated" from="LevelManager" to="." method="_on_level_manager_level_index_updated"]
[connection signal="timeout" from="FirstLevelDelayTimer" to="." method="_on_first_level_delay_timer_timeout"]
